--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,20 @@
 	},
 
 	"require": {
-		"phpbench/phpbench": "^0.16.10",
+		"phpbench/phpbench": "^1.0",
 		"symfony/routing": "^4.4",
-		"nikic/fast-route": "^1.3"
+		"nikic/fast-route": "^1.3",
+		"facebook/hack-router": "dev-main"
+	},
+	"repositories": [
+		{
+			"type": "path",
+			"url": "../hack-router/"
+		}
+	],
+	"require-dev": {
+		"cache/array-adapter": "^1.1",
+		"cache/apcu-adapter": "^1.1",
+		"symfony/cache": "^5.3"
 	}
 }
