--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,20 @@
 {
-	"name": "kktsvetkov/benchmark-php-routing",
-	"description": "Benchmark PHP Routing",
-	"autoload":
-	{
-		"psr-4":
-		{
-			"Benchmark_Routing\\": "benchmark/"
-		}
-	},
-
-	"require": {
-		"phpbench/phpbench": "^1.0",
-		"symfony/routing": "^4.4",
-		"nikic/fast-route": "^1.3",
-		"facebook/hack-router": "dev-main"
-	},
-	"repositories": [
-		{
-			"type": "path",
-			"url": "../hack-router/"
-		}
-	],
-	"require-dev": {
-		"cache/array-adapter": "^1.1",
-		"cache/apcu-adapter": "^1.1",
-		"symfony/cache": "^5.3"
-	}
+  "name": "kktsvetkov/benchmark-php-routing",
+  "description": "Benchmark PHP Routing",
+  "autoload": {
+    "psr-4": {
+      "BenchmarkRouting\\": "benchmark/"
+    }
+  },
+  "require": {
+    "php": "^8.0",
+    "ext-apcu": "*",
+    "phpbench/phpbench": "^1.0",
+    "symfony/routing": "^4.4",
+    "nikic/fast-route": "^1.3",
+    "azjezz/hack-routing": "dev-main"
+  },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "^3.6.0"
+  }
 }
