--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "phpbench/phpbench": "^1.0",
     "symfony/routing": "^4.4",
     "nikic/fast-route": "^1.3",
-    "azjezz/hack-routing": "dev-main"
+    "azjezz/hack-routing": "dev-main",
+    "symfony/config": "^5.3"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0"
