Use a stable branch of FastRoute

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "ext-apcu": "*",
     "phpbench/phpbench": "^1.0",
     "symfony/routing": "^4.4",
-    "nikic/fast-route": "dev-introduce-cache-drivers@dev",
+    "nikic/fast-route": "^2.0@dev",
     "azjezz/hack-routing": "dev-main",
     "symfony/config": "^5.3"
   },
