Make sure cache files exist before running benchmark
Opcache on CLI requires the cache files to be created by a different
process to really kick in. Without that we see very to little benefit
in the file cache, which is actually the fastest strategy on real
servers.

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -34,4 +34,4 @@ jobs:
         run: "composer install --no-interaction --no-progress"
 
       - name: "running quick benchmarks"
-        run: php scripts/quick-benchmark.php
+        run: php scripts/quick-benchmark.php &> /dev/null && php scripts/quick-benchmark.php
