--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,8 +1,6 @@
 name: "benchmarks"
 
-on:
-  pull_request: ~
-  push: ~
+on: workflow_dispatch
 
 jobs:
   unit-tests:
@@ -31,7 +29,12 @@ jobs:
           coverage: none
 
       - name: "installing dependencies"
-        run: "composer install --no-interaction --no-progress"
+        run: "composer install --no-interaction --no-progress --prefer-dist --no-dev --classmap-authoritative"
 
-      - name: "running quick benchmarks"
-        run: php scripts/quick-benchmark.php &> /dev/null && php scripts/quick-benchmark.php
+      - name: "running benchmark"
+        run: php vendor/bin/phpbench run --report=default --output=html
+      - name: "create result.md"
+        run: php scripts/html-to-markdown.php
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Update benchmark
