--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,11 @@
   "require": {
     "php": "^8.0",
     "ext-apcu": "*",
-    "phpbench/phpbench": "^1.0",
-    "symfony/routing": "^4.4",
+    "phpbench/phpbench": "^1.1",
+    "symfony/routing": "^5.3",
     "nikic/fast-route": "^2.0@dev",
     "azjezz/hack-routing": "dev-main",
-    "symfony/config": "^5.3"
-  },
-  "require-dev": {
-    "squizlabs/php_codesniffer": "^3.6.0"
+    "symfony/config": "^5.3",
+    "symfony/dom-crawler": "^5.3"
   }
 }
